# TodoManager

./: CHANGELOG.md  LICENSE  README.md  TodoManager.cabal  flake.nix
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
exe/: Main.hs
