cabal-version:      3.4
name:               TodoManager
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           abundantsolutions.dev
license:            ISC
license-file:       LICENSE
author:             Nicholas John Childs
maintainer:         abundantsolutions.dev@proton.me
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable TodoManager
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
 		      optparse-applicative,
		      text,
		      mtl,
		      directory,
		      shelly


    hs-source-dirs:   exe
    default-language: GHC2021
